--- a/vercel.json
+++ b/vercel.json
@@ -7,14 +7,14 @@
   },
   "builds": [
     {
-      "src": "api/handler.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/handler.js"
+      "dest": "/api/index.js"
     }
   ]
 }
